load and hashchange events implemented

--- a/index.html
+++ b/index.html
@@ -80,6 +80,8 @@
 
     <div class="search-results">
       <ul class="results">
+        <a href="#5ed6604591c37cdc054bc886">RECIPE 1</a>
+        <a href="#5ed6604591c37cdc054bc90b">RECIPE 2</a>
         <!-- 
           <li class="preview">
             <a class="preview__link preview__link--active" href="#23456">
@@ -116,10 +118,7 @@
       </div>
 
       <p class="copyright">
-        &copy; Copyright by
-        <a class="twitter-link" target="_blank" href="https://twitter.com/jonasschmedtman">Jonas Schmedtmann</a>. Use
-        for learning or your portfolio. Don't use to teach. Don't claim
-        as your own.
+        Built by Rodrigo de Lascio following a course by Jonas Schmedtmann.
       </p>
     </div>
 
